# eos-prefix-list-agent

./: .coveragerc  .gitignore  .markdownlint.yml  .pyup.yml  .travis.yml  404.html  Dockerfile  Earthfile  LICENSE  MANIFEST.in  Pipfile  README.md  do-release.sh  index.html  pyproject.toml  searchindex.js  searchindex.json  setup.cfg  setup.py  test.sh  tox.ini
.github/: codecov.yml
.github/actions/earthly/: action.yml
.github/workflows/: cicd.yml  earthly.yml
about/: background.html  implementation.html  index.html
config/: agent.html  index.html  prefix-lists.html  tracing.html
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/about/: README.md  background.md  implementation.md
docs/src/config/: README.md  agent.md  prefix-lists.md  tracing.md
docs/src/install/: README.md
docs/src/ops/: README.md
install/: index.html
ops/: index.html
packaging/: constraints-build.txt  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements-safety.txt  requirements-test.txt  requirements-tox.txt
packaging/rpm/: prefix_list_agent.spec  prefix_list_agent_cli.spec
packaging/swix/: manifest.yaml
prefix_list_agent/: __init__.py  __meta__.py  agent.py  base.py  cli.py  exceptions.py  pyproject.toml  setup.cfg  types.py  worker.py
prefix_list_agent/prefix_list_agent/: __init__.py  agent.py  base.py  exceptions.py  types.py  worker.py
prefix_list_agent_cli/: pyproject.toml  setup.cfg
prefix_list_agent_cli/prefix_list_agent_cli/: __init__.py  extension.py  extension.yaml
tests/: conftest.py  test_agent.py  test_base.py  test_cli.py  test_exceptions.py  test_worker.py
tests/00_unit/: conftest.py  test_agent.py  test_base.py  test_cli.py  test_exceptions.py  test_init.py  test_worker.py
tests/01_integration/: conftest.py  rptk_stub.py  test_agent_daemon.py
tests/data/: startup-config
tests/integration/: conftest.py  test_agent_daemon.py
tests/unit/: test_agent.py  test_base.py
tools/: build.sh  test.sh
tools/test/: .coveragerc  Dockerfile
