[build-system]
requires = [
    "setuptools==44.1.1",
    "wheel==0.37.0",
    "setuptools_scm[toml]==5.0.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
local_scheme = "no-local-version"

[tool.mypy]
pretty = true
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "CliExtension"
ignore_missing_imports = true
